Update index.html to correct the URL for "A Creative Mindset" link and modify base.css to set the visibility of active links to hidden for improved styling.

--- a/css/base.css
+++ b/css/base.css
@@ -108,6 +108,7 @@ a:active {
   height: 3rem;
   width: auto;
   flex-shrink: 0;
+  visibility: hidden;
 }
 
 /* PHOTO */
